--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,18 +18,18 @@
   </div>
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Sample App</h1>
+    <h1>Welcome to NQV</h1>
 
     <h2>
-      This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
+      This is the home page for the NQV application.
     </h2>
 
     <%= link_to "Sign up now!", signup_path,
                                 class: "btn btn-large btn-primary" %>
+								<%= "or" %>
 								
-<%= link_to "Import Linkedin", "/linkedin/auth" %>
+<%= link_to "Connect with Linkedin", "/linkedin/auth",
+                                class: "btn btn-large btn-primary" %>
 								
   </div>
 
